[package]
name = "wolfeymetrics"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
prost = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
chrono = "0.4.38"
dashmap = { version = "6.1.0", features = ["inline", "serde"] }
tokio = { version = "1.40.0", features = ["full"] }
pco = "0.3.1"
envy = "0.4.2"


[build-dependencies]
tonic-build = "0.12"
