[package]
name = "crunchert"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
prost = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
chrono = "0.4.38"
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tracing-subscriber = "0.3.18"
envy = "0.4.2"
crunchert-storage = "0.1.0"
anyhow = "1.0.90"


[build-dependencies]
tonic-build = "0.12"
